# distance_education_system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
assessment/: models.py  scheduler.py  serializers.py  tests.py  urls.py  views.py
assessment/services/: operations_service.py  students_service.py  work_check_service.py
assessment/tests/component_tests/: test_views.py
assessment/tests/unit_tests/: test_student_service.py  test_work_check_service.py
distance_education_system/: asgi.py  settings.py  settings_mocked.py  urls.py  wsgi.py
